# fortuna-1

./: .gitignore  .gitmodules  README.md
common/: messages.proto  nanopb.proto  protocol.h
common/libf1comm/: CMakeLists.txt  buffer.hh  debuginformation.cc  debuginformation.hh  defines.hh  deserialize.hh  fortuna1def.hh  message.cc  message.hh  message_type.hh  reply.cc  reply.hh  request.cc  request.hh  serialization.cc  serialization.hh  tests.cc
common/libf1comm/fields/: event.cc  event.hh  ramrequest.cc  ramrequest.hh  sdcardstatus.cc  sdcardstatus.hh  z80info.cc  z80info.hh
common/libf1comm/messages/: debuginformation.hh  deserialize.hh  reply.cc  reply.hh  request.cc  request.hh
debugger/libfortuna1/: CMakeLists.txt  fortuna1.hh  fortuna1.z80  fortuna1emulator.cc  fortuna1emulator.hh  fortuna1realhardware.cc  fortuna1realhardware.hh  libf1comm  replyexception.hh  serial.cc  serial.hh
debugger/libfortuna1/compiler/: compiler.cc  compiler.hh  debug.cc  debug.hh
debugger/libfortuna1/emulator/: fortuna1emulator.cc  fortuna1emulator.hh  sdcard_emulated.cc  sdcard_emulated.hh  z80_overrides.cc
debugger/libfortuna1/realhardware/: fortuna1realhardware.cc  fortuna1realhardware.hh  serial.cc  serial.hh
debugger/libfortuna1/tests/: run_tests.sh  sdcard.img  test-basic.cc  test-bkps.cc  test-compiler.cc  test-load.cc  test-memory.cc  test-reset.cc  test-run.cc  test-sdcard.cc  test-z80.cc  tsupport.cc  tsupport.hh
doc/: architecture.dia
firmware/controller/: Makefile  breakpoints.cc  breakpoints.hh  command.cc  command.hh  console.cc  console.hh  fortuna1.cc  fortuna1.hh  io.cc  io.hh  main.cc  messages.proto  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h  ram.cc  ram.hh  repl.cc  repl.hh  reset  sdcard.cc  sdcard.hh  serial.cc  serial.hh  spi.cc  spi.hh  tests.cc  tests.hh  util.cc  util.hh
firmware/controller/devices/: ram.cc  ram.hh  sdcard.cc  sdcard.hh  terminal.cc  terminal.hh  z80.cc  z80.hh
firmware/controller/protocol/: spi.cc  spi.hh
firmware/dma/: Makefile  main.c  ram.c  ram.h  reset  serial.c  serial.h  spi.c  spi.h  terminal  terminal_uart  test.c
firmware/sanity/: Makefile  avrdude_gpio.conf  main.c
z80code/: fortuna1.z80
